Add href to drum-kit anchor tag

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a class="thumbnail-link" href="https://mchwebdev.github.io/drum-kit/" target="_blank"><img src="img/drum-kit.png" alt="Drum kit" class="thumbnail"></a>
             <div class="work-infos">
               <h2 class="work-title">Drum kit</h2>
-              <div class="work-link"><a href="">https://mchwebdev.github.io/drum-kit/</a></div>
+              <div class="work-link"><a href="https://mchwebdev.github.io/drum-kit/">https://mchwebdev.github.io/drum-kit/</a></div>
             </div>
           </div>
         </div>
