Change h2 work-title to an anchor tag

--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
           <div class="work">
             <a class="thumbnail-link" href="https://mchwebdev.github.io/pixel-art-maker/" target="_blank"><img src="img/pixel-art-maker.png" alt="Pixel art maker" class="thumbnail"></a>
             <div class="work-infos">
-              <h2 class="work-title">Pixel art maker</h2>
+              <a href="https://mchwebdev.github.io/pixel-art-maker/" class="work-title">Pixel art maker</a>
               <div class="work-link"><a href="https://mchwebdev.github.io/pixel-art-maker/">https://mchwebdev.github.io/pixel-art-maker/</a></div>
             </div>
           </div>
           <div class="work">
             <a class="thumbnail-link" href="https://mchwebdev.github.io/surprise-recipe/" target="_blank"><img src="img/surprise-recipe.png" alt="Smoothie generator" class="thumbnail"></a>
             <div class="work-infos">
-              <h2 class="work-title">Smoothie generator</h2>
+              <a href="https://mchwebdev.github.io/surprise-recipe/" class="work-title">Smoothie generator</a>
               <div class="work-link"><a href="https://mchwebdev.github.io/surprise-recipe/">https://mchwebdev.github.io/surprise-recipe/</a></div>
             </div>
           </div>
           <div class="work">
             <a class="thumbnail-link" href="https://mchwebdev.github.io/drum-kit/" target="_blank"><img src="img/drum-kit.png" alt="Drum kit" class="thumbnail"></a>
             <div class="work-infos">
-              <h2 class="work-title">Drum kit</h2>
+              <a href="https://mchwebdev.github.io/drum-kit/" class="work-title">Drum kit</a>
               <div class="work-link"><a href="https://mchwebdev.github.io/drum-kit/">https://mchwebdev.github.io/drum-kit/</a></div>
             </div>
           </div>
