changes - see description
- Change height to auto
- Change thumbnail images to smaller 480px
- Use shorthand font property
- Add new line to each selector

--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
       <section id="portfolio">
         <h2 id="portfolio-title">Featured work</h2>
         <div id="portfolio-work">
-          <div class="work">
-            <a class="thumbnail-link" href="https://mchwebdev.github.io/pixel-art-maker/" target="_blank"><img src="img/pixel-art-maker.png" alt="Pixel art maker" class="thumbnail"></a>
+          <article class="work">
+            <a class="thumbnail-link" href="https://mchwebdev.github.io/pixel-art-maker/" target="_blank"><img src="img/pixel-art-maker-480px.png" alt="Pixel art maker" class="thumbnail"></a>
             <div class="work-infos">
               <h2 class="work-title">Pixel art maker</h2>
               <div class="work-link"><a href="https://mchwebdev.github.io/pixel-art-maker/">https://mchwebdev.github.io/pixel-art-maker/</a></div>
             </div>
-          </div>
+          </article>
           <div class="work">
-            <a class="thumbnail-link" href="https://mchwebdev.github.io/surprise-recipe/" target="_blank"><img src="img/surprise-recipe.png" alt="Smoothie generator" class="thumbnail"></a>
+            <a class="thumbnail-link" href="https://mchwebdev.github.io/surprise-recipe/" target="_blank"><img src="img/surprise-recipe-480px.png" alt="Smoothie generator" class="thumbnail"></a>
             <div class="work-infos">
               <h2 class="work-title">Smoothie generator</h2>
               <div class="work-link"><a href="https://mchwebdev.github.io/surprise-recipe/">https://mchwebdev.github.io/surprise-recipe/</a></div>
             </div>
           </div>
           <div class="work">
-            <a class="thumbnail-link" href="https://mchwebdev.github.io/drum-kit/" target="_blank"><img src="img/drum-kit.png" alt="Drum kit" class="thumbnail"></a>
+            <a class="thumbnail-link" href="https://mchwebdev.github.io/drum-kit/" target="_blank"><img src="img/drum-kit-480px.png" alt="Drum kit" class="thumbnail"></a>
             <div class="work-infos">
               <h2 class="work-title">Drum kit</h2>
               <div class="work-link"><a href="">https://mchwebdev.github.io/drum-kit/</a></div>
