--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="theme-color" content="#7d97ad">
+  <link rel="shortcut icon" type="image/png" href="img/favicon-16px.png">
+  <link rel="icon" sizes="192x192" href="img/logo-chrome-192px.png">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <title>Maxence Caillaud-Houël</title>
@@ -11,14 +14,15 @@
 <body>
   <div id="container">
     <header id="header">
-      <img src="img/logo.jpg" alt="Logo" id="logo">
+      <img src="img/logo-100px.png" alt="Logo" id="logo">
       <div id="infos">
         <h1 class="name">Maxence Caillaud-Houël</h1>
         <p class="description">Front end web developer</p>
       </div>
     </header>
+
     <main id="content">
-      <img src="img/background.jpeg" alt="Background image" id="background">
+      <img src="img/background-850px.png" alt="Background image" id="background">
       <section id="portfolio">
         <h2 id="portfolio-title">Featured work</h2>
         <div id="portfolio-work">
