Different changes - see description
- Add wrapper
- Add footer
- Add font-awesome script link
- Add anchor tags to FA icons

--- a/index.html
+++ b/index.html
@@ -8,48 +8,59 @@
   <link rel="shortcut icon" type="image/png" href="img/favicon-16px.png">
   <link rel="icon" sizes="192x192" href="img/logo-chrome-192px.png">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700" rel="stylesheet">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <link rel="stylesheet" href="css/style.css">
   <title>Maxence Caillaud-Houël</title>
 </head>
 <body>
-  <div id="container">
-    <header id="header">
-      <img src="img/logo-100px.png" alt="Logo" id="logo">
-      <div id="infos">
-        <h1 class="name">Maxence Caillaud-Houël</h1>
-        <p class="description">Front end web developer</p>
-      </div>
-    </header>
-
-    <main id="content">
-      <img src="img/background-850px.png" alt="Background image" id="background">
-      <section id="portfolio">
-        <h2 id="portfolio-title">Featured work</h2>
-        <div id="portfolio-work">
-          <article class="work">
-            <a class="thumbnail-link" href="https://mchwebdev.github.io/pixel-art-maker/" target="_blank"><img src="img/pixel-art-maker-480px.png" alt="Pixel art maker" class="thumbnail"></a>
-            <div class="work-infos">
-              <a href="https://mchwebdev.github.io/pixel-art-maker/" class="work-title">Pixel art maker</a>
-              <div class="work-link"><a href="https://mchwebdev.github.io/pixel-art-maker/">https://mchwebdev.github.io/pixel-art-maker/</a></div>
-            </div>
-          </article>
-          <div class="work">
-            <a class="thumbnail-link" href="https://mchwebdev.github.io/surprise-recipe/" target="_blank"><img src="img/surprise-recipe-480px.png" alt="Smoothie generator" class="thumbnail"></a>
-            <div class="work-infos">
-              <a href="https://mchwebdev.github.io/surprise-recipe/" class="work-title">Smoothie generator</a>
-              <div class="work-link"><a href="https://mchwebdev.github.io/surprise-recipe/">https://mchwebdev.github.io/surprise-recipe/</a></div>
-            </div>
-          </div>
-          <div class="work">
-            <a class="thumbnail-link" href="https://mchwebdev.github.io/drum-kit/" target="_blank"><img src="img/drum-kit-480px.png" alt="Drum kit" class="thumbnail"></a>
-            <div class="work-infos">
-              <a href="https://mchwebdev.github.io/drum-kit/" class="work-title">Drum kit</a>
-              <div class="work-link"><a href="https://mchwebdev.github.io/drum-kit/">https://mchwebdev.github.io/drum-kit/</a></div>
-            </div>
-          </div>
+  <div id="wrapper">
+    <div id="container">
+      <header id="header">
+        <img src="img/logo-100px.png" alt="Logo" id="logo">
+        <div id="infos">
+          <h1 class="name">Maxence Caillaud-Houël</h1>
+          <p class="description">Front end web developer</p>
         </div>
-      </section>
-    </main>
+      </header>
+
+      <main id="content">
+        <img src="img/background-850px.png" alt="Background image" id="background">
+        <section id="portfolio">
+          <h2 id="portfolio-title">Featured work</h2>
+          <div id="portfolio-work">
+            <article class="work">
+              <a class="thumbnail-link" href="https://mchwebdev.github.io/pixel-art-maker/" target="_blank"><img src="img/pixel-art-maker-480px.png" alt="Pixel art maker" class="thumbnail"></a>
+              <div class="work-infos">
+                <a href="https://mchwebdev.github.io/pixel-art-maker/" class="work-title">Pixel art maker</a>
+                <div class="work-link"><a href="https://mchwebdev.github.io/pixel-art-maker/">https://mchwebdev.github.io/pixel-art-maker/</a></div>
+              </div>
+            </article>
+            <div class="work">
+              <a class="thumbnail-link" href="https://mchwebdev.github.io/surprise-recipe/" target="_blank"><img src="img/surprise-recipe-480px.png" alt="Smoothie generator" class="thumbnail"></a>
+              <div class="work-infos">
+                <a href="https://mchwebdev.github.io/surprise-recipe/" class="work-title">Smoothie generator</a>
+                <div class="work-link"><a href="https://mchwebdev.github.io/surprise-recipe/">https://mchwebdev.github.io/surprise-recipe/</a></div>
+              </div>
+            </div>
+            <div class="work">
+              <a class="thumbnail-link" href="https://mchwebdev.github.io/drum-kit/" target="_blank"><img src="img/drum-kit-480px.png" alt="Drum kit" class="thumbnail"></a>
+              <div class="work-infos">
+                <a href="https://mchwebdev.github.io/drum-kit/" class="work-title">Drum kit</a>
+                <div class="work-link"><a href="https://mchwebdev.github.io/drum-kit/">https://mchwebdev.github.io/drum-kit/</a></div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
+    </div>
+
+    <footer id="footer">
+      <div class="social-icons">
+        <a href="mailto:mchwebdev@gmail.com" class="social-links"><i class="far fa-envelope"></i></a>
+        <a href="#" class="social-links"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/mchwebdev" class="social-links" target="_blank"><i class="fab fa-github"></i></a>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
