--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="theme-color" content="#7d97ad">
   <link rel="shortcut icon" type="image/png" href="img/favicon-16px.png">
   <link rel="icon" sizes="192x192" href="img/logo-chrome-192px.png">
+  <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700" rel="stylesheet">
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <link rel="stylesheet" href="css/style.css">
